--- a/Макет/index.html
+++ b/Макет/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Golden</title>
-	<link rel="stylesheet" href="C:\Users\USES\Desktop\MAKE\css\style.css">
+	<link rel="stylesheet" href="C:\Users\USES\Desktop\MAKE\Макет\css\style.css">
 </head>
 <body>
 
