--- a/DS/index.html
+++ b/DS/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Golden</title>
-	<link rel="stylesheet" href="..DS\css\style.css">
+	<link rel="stylesheet" href="..DS/css\style.css">
 </head>
 <body>
 
